--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -73,3 +73,77 @@ button.disabled {
   background-color: grey;
   cursor: not-allowed;
 }
+/* HOME */
+.home-container{
+  display: flex;
+  justify-content: space-evenly;
+
+  height: 800px;
+}
+form img{
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+}
+
+.sideBarHome-home{
+ display: flex;
+ align-items: center;
+ 
+}
+.container-homecontent{
+  border-left: 1px solid rgb(214, 214, 214);
+  border-right: 1px solid rgb(214, 214, 214);
+  width: 50%;
+}
+.container-homecontent div form{
+  background-color: rgb(235, 231, 231);
+  padding: .7rem;
+  margin: 1.25rem 1.5rem;
+}
+.container-homecontent div form div:nth-child(1),
+.container-homecontent div form div:nth-child(2){
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+.container-homecontent div form div:nth-child(2){
+  margin-top: .8rem;
+  margin-left: 3.4rem;
+  display: flex;
+  justify-content: space-between;
+  width: 86%;
+}
+.container-homecontent div form div:nth-child(2) svg{
+ width: 32px;
+ height: 32px;
+} 
+.container-homecontent div form div:nth-child(2) button{
+  background-color: rgb(163, 160, 160);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+} 
+.container-homecontent div form div:nth-child(2) button:hover{
+  background-color:rgb(98, 98, 255);
+}
+.input-happening{
+  height: 36px;
+  font-size: 16px;
+  width: 85%;
+  border: none;
+  padding-bottom: .5rem;
+  border-bottom: 1px solid black;
+  background-color: rgb(235, 231, 231);
+  outline: none;
+}
+.input-happening:focus{
+  border-color: rgb(163, 160, 160);;
+}
