--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -103,6 +103,7 @@ form img, .profile-img{
   background-color: rgb(235, 231, 231);
   padding: .7rem;
   margin: 1.25rem 1.5rem;
+  border-radius: .5rem;
 }
 .container-homecontent div form div:nth-child(1),
 .container-homecontent div form div:nth-child(2){
@@ -171,4 +172,40 @@ form img, .profile-img{
   height: 100px;
   background-color: orange;
   transition: all 0.3s ease-in-out;
+}
+/* SINGLEPOST */
+.singlePost-container{
+  margin: 1.25rem 1.5rem;
+  background-color: rgb(235, 231, 231);
+  border-radius: .5rem;
+  padding: .7rem;
+}
+/* USERPOST */
+.userPost-container{
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.userPost-container div img{
+  width: 46px;
+  height: 46px;
+  border-radius: 100%;
+}
+.userPost-container div{
+  display: flex;
+  justify-content: space-between;
+}
+ .user-details{
+  margin-left: .8rem;
+  display: flex;
+  flex-direction: column;
+ }
+
+.userPost-container div div p:nth-child(1){
+  font-size: 16px;
+  color: rgb(87, 86, 86);
+}
+.userPost-container div div p:nth-child(2){
+  font-size: 20px;
 }
