--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -214,3 +214,16 @@ form img, .profile-img{
   align-items: center;
   gap: .5rem;
 }
+/* CONTENTPOST */
+.contentPost-container{
+  display: flex;
+  flex-direction: column;
+}
+.contentPost-container .contentPost-img{
+  width: 100%;
+  height: 360px;
+  border-radius: .5rem;
+}
+.contentPost-container p {
+  margin-top: .6rem;
+}
