--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -227,3 +227,35 @@ form img, .profile-img{
 .contentPost-container p {
   margin-top: .6rem;
 }
+/* POSTBTNS */
+#postsBtns-container{
+  display: flex;
+  justify-content: flex-start;
+  gap:1rem;
+
+}
+.postsBtns-container button{
+  background: none;
+  cursor: pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+.btn-like,.btn-comment{
+  background-color: rgb(179, 176, 176);
+  color:rgb(90, 90, 90) ;
+  cursor: pointer;
+  border:none;
+  width: 80px;
+  height: 30px;
+  border-radius: .5rem;
+  transition: background-color 0.3s ease;
+}
+.btn-like:hover,.btn-comment:hover{
+  background-color: white;
+  color: rgb(212, 212, 212);
+}
