--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -99,30 +99,30 @@ form img, .profile-img{
   border-right: 1px solid rgb(214, 214, 214);
   width: 50%;
 }
-.container-homecontent div form{
+.container-homecontent div .home-content-form{
   background-color: rgb(235, 231, 231);
   padding: .7rem;
   margin: 1.25rem 1.5rem;
   border-radius: .5rem;
 }
-.container-homecontent div form div:nth-child(1),
-.container-homecontent div form div:nth-child(2){
+.container-homecontent div .home-content-form div:nth-child(1),
+.container-homecontent div .home-content-form div:nth-child(2){
   display: flex;
   align-items: center;
   gap: .5rem;
 }
-.container-homecontent div form div:nth-child(2){
+.container-homecontent div .home-content-form div:nth-child(2){
   margin-top: .8rem;
   margin-left: 3.4rem;
   display: flex;
   justify-content: space-between;
   width: 86%;
 }
-.container-homecontent div form div:nth-child(2) svg{
+.container-homecontent div .home-content-form div:nth-child(2) svg{
  width: 32px;
  height: 32px;
 } 
-.container-homecontent div form div:nth-child(2) button{
+.container-homecontent div .home-content-form div:nth-child(2) button{
   background-color: rgb(163, 160, 160);
   border: none;
   color: white;
@@ -135,7 +135,7 @@ form img, .profile-img{
   border-radius: 8px;
   transition: background-color 0.3s;
 } 
-.container-homecontent div form div:nth-child(2) button:hover{
+.container-homecontent div .home-content-form div:nth-child(2) button:hover{
   background-color:rgb(98, 98, 255);
 }
 .input-happening{
@@ -301,5 +301,51 @@ form img, .profile-img{
 .clickedPost-parent {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.25rem;
+}
+/* COMMENT */
+.comment-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  border-radius: 5px;
+}
+
+.comment-form {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.comment-input {
+  flex: 1;
+  padding: 0.5rem;
+  border: none;
+  border-bottom: 1px solid rgb(77, 77, 77);
+}
+.comment-input:active{
+border: none;
+}
+
+.comment-button {
+  background-color: #ccc;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+}
+
+.comment-button.enabled {
+  background-color: #007bff;
+  color: white;
+}
+
+.comment-button svg {
+  width: 20px;
+  height: 20px;
 }
