--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -323,9 +323,13 @@ form img, .profile-img{
   padding: 0.5rem;
   border: none;
   border-bottom: 1px solid rgb(77, 77, 77);
+  margin-bottom: 1rem;
 }
-.comment-input:active{
-border: none;
+.comment-input:focus{
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgb(77, 77, 77);
+  padding: 0.5rem;
 }
 
 .comment-button {
