--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -323,7 +323,8 @@ form img, .profile-img{
   padding: 0.5rem;
   border: none;
   border-bottom: 1px solid rgb(77, 77, 77);
-  margin-bottom: 1rem;
+ 
+  font-size: 16px;
 }
 .comment-input:focus{
   border: none;
