--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -354,3 +354,13 @@ form img, .profile-img{
   width: 20px;
   height: 20px;
 }
+/* COMMENTS */
+.comments-container{
+  display: flex;
+  flex-direction: column;
+  gap:.75rem
+}
+.comments-text{
+  color: rgb(82, 81, 81);
+  margin-bottom: 1rem;
+}
