--- a/TalkWrite-social-network/src/index.css
+++ b/TalkWrite-social-network/src/index.css
@@ -399,5 +399,8 @@ form img, .profile-img{
 .date-delete svg{
   width: 15px;
   height: 15px;
-  
+}
+.trash svg{
+  color: rgb(236, 82, 82);
+  cursor: pointer;
 }
